[package]
name = "songrecfp"
license = "GPL-3.0+"
description = "Only the fingerprint part from SongRec, an open-source Shazam client for Linux."
version = "1.0.0"
authors = ["marin-m", "davidtakac"]
edition = "2018"

[dependencies]
chfft = "0.3.4" # Fast Fourier transform
byteorder = "1.4.3" # Used for reading and writing binary structures
crc32fast = "1.2.1" # Used for the CRC-32 checksum in the binary signature
base64 = "0.13.0"
rodio = { version = "0.15.0", default-features = false, features = ["symphonia-aac"] } # For reading WAV/MP3/FLAG/OGG files, resampling and playing audio.
tempfile = "3.3.0"
jni = { version = "0.19.0", default-features = false}

[lib]
name = "songrecfp"
crate-type = ["cdylib"]